[gd_scene load_steps=12 format=3 uid="uid://b300jhat3hll0"]

[ext_resource type="Script" path="res://Car.gd" id="1_gfyi6"]
[ext_resource type="Texture2D" uid="uid://by7do2868ttxe" path="res://assets/Green_Car.png" id="1_yd22f"]
[ext_resource type="Texture2D" uid="uid://ut2a7gxcr3ai" path="res://assets/Smoke_Animation1.png" id="2_3fsp6"]
[ext_resource type="Texture2D" uid="uid://bhb41dqxu2pyl" path="res://assets/Smoke_Animation2.png" id="3_hx42c"]
[ext_resource type="Texture2D" uid="uid://cbvkwfnjaxijk" path="res://assets/Smoke_Animation3.png" id="4_3nb8g"]
[ext_resource type="Texture2D" uid="uid://cmby1jsrauthm" path="res://assets/Smoke_Animation4.png" id="5_myl2i"]
[ext_resource type="Texture2D" uid="uid://dq34l6hnt8mox" path="res://assets/Smoke_Animation5.png" id="6_blrd2"]
[ext_resource type="Texture2D" uid="uid://h4v2rlxjxx0k" path="res://assets/Smoke_Animation6.png" id="7_bjds0"]
[ext_resource type="Texture2D" uid="uid://bir4ddm51magn" path="res://assets/Smoke_Animation7.png" id="8_ngyar"]

[sub_resource type="SpriteFrames" id="SpriteFrames_ss0v3"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("2_3fsp6")
}, {
"duration": 1.0,
"texture": ExtResource("3_hx42c")
}, {
"duration": 1.0,
"texture": ExtResource("4_3nb8g")
}, {
"duration": 1.0,
"texture": ExtResource("5_myl2i")
}, {
"duration": 1.0,
"texture": ExtResource("6_blrd2")
}, {
"duration": 1.0,
"texture": ExtResource("7_bjds0")
}, {
"duration": 1.0,
"texture": ExtResource("8_ngyar")
}],
"loop": false,
"name": &"default",
"speed": 12.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_m6gic"]
size = Vector2(84, 50)

[node name="Car" type="Node2D"]
z_index = 2
z_as_relative = false
scale = Vector2(0.5, 0.5)
script = ExtResource("1_gfyi6")

[node name="Sprite2D" type="Sprite2D" parent="."]
rotation = 1.5708
scale = Vector2(0.64, 0.64)
texture = ExtResource("1_yd22f")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
position = Vector2(180, -32)
scale = Vector2(5, 5)
sprite_frames = SubResource("SpriteFrames_ss0v3")

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2(-2, -1)
shape = SubResource("RectangleShape2D_m6gic")

[node name="SlowDown" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[connection signal="animation_finished" from="AnimatedSprite2D" to="." method="_on_animated_sprite_2d_animation_finished"]
[connection signal="area_entered" from="Area2D" to="." method="_on_area_2d_area_entered"]
[connection signal="timeout" from="SlowDown" to="." method="_on_slow_down_timeout"]
